--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.30.0",
+    "sqlite3": "^5.1.6"
   }
 }
