--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "sequelize": "^6.30.0",
+    "sqlite": "^4.1.2",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
