--- a/api/package.json
+++ b/api/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "regex": "^0.1.1",
     "sequelize": "^6.30.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.6"
